# lewisham-council-home-assistant

./: .gitignore  README.md  hacs.json  pyproject.toml
.github/workflows/: test.yml  validate.yml
blueprints/automation/lewisham_council_bins/: reminder.yaml
custom_components/lewisham_council/: __init__.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  strings.json
custom_components/lewisham_council/translations/: en.json
custom_components/lewisham_council_bins/: coordinator.py  icons.json  manifest.json  quality_scale.yaml  sensor.py  strings.json
custom_components/lewisham_council_bins/translations/: en.json  es.json  fr.json  it.json  pl.json  pt.json  ro.json  ta.json
tests/: conftest.py  test_config_flow.py  test_coordinator.py  test_sensor.py
