[project]
name = "lewisham-council-bins-home-assistant"
version = "0.4.0"
description = "Home Assistant custom integration for Lewisham Council bin collections"
requires-python = ">=3.13"
# Runtime dependencies are declared in manifest.json and installed by HA/HACS.
# This section is for dev tooling only.
dependencies = []

[dependency-groups]
# Mirrors manifest.json's "requirements" so the local venv has what the
# integration itself imports at runtime. Keep this in sync with manifest.json.
runtime = [
    "lewisham-council-client==0.1.0",
]
dev = [
    { include-group = "runtime" },
    # Not a manifest.json requirement: Home Assistant is the host runtime that
    # loads this integration, never a dependency it declares. Pinned loosely to
    # the README's stated minimum supported version, for local type-checking
    # and IDE import resolution only.
    "homeassistant>=2024.6",
    "pytest-homeassistant-custom-component",
    "pytest-cov>=6.0",
    "ruff>=0.9",
    "mypy>=1.14",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Ensure the project root is on sys.path so HA's custom-component namespace
# package discovery can find custom_components/lewisham_council_bins/.
pythonpath = ["."]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.13"
strict = true
# homeassistant ships its own stubs; allow missing stubs for packages that don't.
ignore_missing_imports = true
